Navigation items margin left to right changed

--- a/style_old.css
+++ b/style_old.css
@@ -32,8 +32,8 @@ body {
   padding: 0;
 }
 
-.header__navigation-item:not(:last-child) {
-  margin-right: 20px;
+.header__navigation-item:not(:first-child) {
+  margin-left: 20px;
 }
 
 .header__navigation-item a {
