--- a/style.css
+++ b/style.css
@@ -40,7 +40,6 @@ body {
   position: relative;
   display: block;
   height: 60px;
-
   line-height: 60px;
   color: #000;
   text-decoration: none;
@@ -56,10 +55,11 @@ body {
   position: absolute;
   bottom: 0;
   content: "";
-
   display: block;
   width: 100%;
   height: 4px;
   background-color: #00acdc;
   border-radius: 4px;
 }
+
+/*# sourceMappingURL=style.css.map */
